fix: resolve JSON double-quote issue in role config PUT commands
- Fix sanitize_role_value function to prevent invalid JSON syntax
- Remove outer quotes from jq output to avoid double-quote errors
- Resolve API parsing errors for multi-line property values
- Update documentation with technical implementation details